--- a/style.css
+++ b/style.css
@@ -41,7 +41,6 @@ header span {
 .main-section .wrapper {
     display: flex;
     flex-direction: row;
-    align-items: center;
     gap: 60px;
     /* 📍 Свойствa flexbox для размещения блока с текстом и изображения в ряд, и центрирования их по вертикали */
 }
@@ -74,6 +73,7 @@ header span {
 .about-section .wrapper {
     display: flex;
     flex-direction: column;
+    gap: 60px; 
     /* 📍 Свойствa flexbox для отступов между элементами select, .info-wrapper и .skills-wrapper  */
 }
 
@@ -201,8 +201,7 @@ th, td {
 footer {
     background-color: rgba(163, 167, 255, 0.3);
     padding: 26px 0;
-    display: flex;
-    justify-content: center;
+    text-align: center;
     /* 📍 Свойство для расположения ссылки горизонтально по центру */
 }
 
