--- a/style.css
+++ b/style.css
@@ -73,7 +73,8 @@ header span {
 .about-section .wrapper {
     display: flex;
     flex-direction: column;
-    gap: 60px; 
+    gap: 60px;
+    align-items: center; 
     /* 📍 Свойствa flexbox для отступов между элементами select, .info-wrapper и .skills-wrapper  */
 }
 
