--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ header span {
     display: flex;
     flex-direction: row;
     gap: 60px;
+    align-items: center; 
     /* 📍 Свойствa flexbox для размещения блока с текстом и изображения в ряд, и центрирования их по вертикали */
 }
 
